resemble.css
body { margin: 0; padding: 1rem; font-family: sans-serif; }

header { width: 100vw; display: flex; flex-wrap: wrap; align-items: stretch; justify-content: center; padding: 0.5rem 0 1rem 0; }

.selectBoxes { width: 100vw; text-align: center; }
.selectBoxes div { display: inline; }
.btn-group { border-right: 1px solid #eee; height: 2rem; padding: 0 .5rem; display: flex; align-items: center; flex-wrap: nowrap; }
.btn-group:first-of-type { padding-left: 0; }
.btn-group.last { padding-right: 0; border-right: none; }

.btn { border-radius: 5px; border: 1px solid #eee; background: white; outline: none; }
.btn.active { box-shadow: inset 0 0 1rem #aaa; }

#diff-results,
#thesame { width: 100vw; }

#thesame { font-size: 1.5rem; color: green; text-align: center; }
#diff-results strong { font-size: 1.5rem; color: orange; text-align: center; width: 100vw; display: block; }

section { display: flex; flex-wrap: nowrap; align-items: stretch; align-items: flext-start; justify-content: center; }

.oneThird,
.oneThirdResult { margin-right: 1rem; box-sizing: border-box; border: 5px dashed #eee; text-align: center; flex-grow: 1; font-size: 1.5rem; color: #ccc; }

.oneThird img,
.oneThirdResult img { width: 100%; max-width: 30vw; height: auto; }

.oneThird p,
.oneThirdResult p { padding: 5rem 0; }

#folderSelector { width: 100vw; }

